# tonic-calc

./: .env.example  .gitignore  Cargo.toml  Config.toml  Makefile  README.md  build.rs
certs/: ca.crt  ca.key  server.crt  server.csr  server.key
proto/: service.proto
src/: .env.example  config.rs  interceptor.rs  lib.rs  middleware.rs  server.rs
src/client/: grpc.rs  interceptor.rs  mod.rs
src/middleware/: logging.rs
src/server/: handler.rs  health.rs  interceptor.rs  mod.rs  signal.rs  state.rs
tls/: openssl.cnf
