[package]
name = "tonic_micro"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = {version = "0.9.2", features = ["transport"]}
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
config = "0.15.13"
anyhow = "1.0.98"
thiserror = "2.0.12"
tower = "0.5.2"
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.9.2"