[package]
name = "tonic_micro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
# Core async and gRPC stack
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Middleware and tower ecosystem
tower = "0.5"                         # For retries, rate-limiting, timeouts, etc.
tower-http = { version = "0.4", features = ["trace", "timeout", "compression", "auth"] } # optional

# Configuration management
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.9"
