[package]
name = "tonic_micro"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
# Core async and gRPC stack
tonic = {version = "0.12", features = ["transport", "tls"]}
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"] }
tonic-health = "0.12"
prost = "0.13"

# Observability
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt", "json", "std"]}
tracing = "0.1.41"

# Middleware and tower ecosystem
tower = "0.5.2"     # For retries, rate-limiting, timeouts, etc.
tower-http = {version = "0.6.6", features = ["full"]}

# Configuration Management
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
dotenvy = "0.15"

# Error Handling
anyhow = "1.0.98"
thiserror = "2.0.12"
futures = "0.3.31"

[build-dependencies]
tonic-build = "0.12"
